# gitopiary

./: Cargo.toml
src/: app.rs  cache.rs  main.rs  vcs.rs
src/events/: handler.rs  mod.rs
src/git/: repo.rs
src/jj/: cli.rs  mod.rs  repo.rs  worktree.rs
src/state/: refresh.rs  types.rs
src/ui/: delete_worktree.rs  mod.rs  new_worktree.rs
