[package]
name = "gitopiary"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitopiary"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
alacritty_terminal = "0.25"
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
arboard = "3"

[dev-dependencies]
tempfile = "3"
